<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.luciano.red.CadastroClienteActivity">

    <EditText
        android:id="@+id/edt_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/edt_codigo_hint"/>

    <EditText
        android:id="@+id/edt_nome_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_nome_hint" />

    <EditText
        android:id="@+id/edt_logradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edt_logradouro_hint" />

    <Spinner
        android:id="@+id/spn_cidade"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Spinner
        android:id="@+id/spn_canal"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_salvar_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btSalvar" />

        <Button
            android:id="@+id/bt_cancelar_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bt_cancelar" />
    </LinearLayout>

</LinearLayout>
