<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDialogPergunta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_pergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/edt_pergunta_hint"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtPontuacaoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:ems="10"
        android:hint="@string/edt_pontuacao_hint"
        android:inputType="number"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spn_TipoPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        />

    <Spinner
        android:id="@+id/spn_subCanal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Button
        android:id="@+id/btSalvarPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/btSalvar" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
